# rbxsync

./: .cursorrules  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  devforum-post.md  llms.txt  obfuscate.toml  package.json  vercel.json
.claude/: .gitignore  MANAGER-GUIDE.md
.claude/briefings/: 2026-01-16.md
.claude/reports/: cli-pivot-analysis.md  competitive-analysis.md  devforum-v1.2-draft.md  error-messages.md  linkedin-beta-testers.md  linkedin-draft.md  mcp-capabilities.md  onboarding-review.md  plugin-review.md  seo-action-plan.md  seo-strategy.md  tech-debt-audit.md  test-coverage.md  windows-audit.md  worker-DOCS-HTTP-API.md  worker-RBXSYNC-11.md  worker-RBXSYNC-21.md  worker-RBXSYNC-29.md  worker-RBXSYNC-7.md  worker-RBXSYNC-8.md  worker-RBXSYNC-9.md
.claude/state/: workers.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml  update-schema.yml
.rbxsync/extract_2805eba8-62fc-47a6-b8db-82ab25efc6f2/: chunk_000001.json  chunk_000002.json  chunk_000003.json  chunk_000004.json  chunk_000005.json  chunk_000006.json  chunk_000007.json  chunk_000008.json  chunk_000009.json  chunk_000010.json  chunk_000011.json
.rbxsync/extract_785c26e7-a85e-4fe4-8db7-e8f03f3e16bd/: chunk_000001.json  chunk_000002.json  chunk_000003.json  chunk_000004.json  chunk_000005.json  chunk_000006.json  chunk_000007.json  chunk_000008.json  chunk_000009.json  chunk_000010.json  chunk_000011.json
.rbxsync/extract_bda130d2-ad24-4d55-a681-a1b15e2de5b5/: chunk_000001.json  chunk_000002.json  chunk_000003.json  chunk_000004.json  chunk_000005.json  chunk_000006.json  chunk_000007.json  chunk_000008.json  chunk_000009.json  chunk_000010.json  chunk_000011.json  chunk_000012.json  chunk_000013.json  chunk_000014.json  chunk_000015.json  chunk_000016.json  chunk_000017.json  chunk_000018.json  chunk_000019.json  chunk_000020.json  chunk_000021.json  chunk_000022.json  chunk_000023.json  chunk_000024.json  chunk_000025.json  chunk_000026.json  chunk_000027.json  chunk_000028.json  chunk_000029.json  chunk_000030.json  chunk_000031.json  chunk_000032.json  chunk_000033.json  chunk_000034.json  chunk_000035.json  chunk_000036.json  chunk_000037.json  chunk_000038.json  chunk_000039.json  chunk_000040.json  (+7855 more)
.rbxsync/extract_cfcf3b47-6c51-49b5-9e31-04a9c00eacfd/: chunk_000001.json  chunk_000002.json  chunk_000003.json  chunk_000004.json  chunk_000005.json  chunk_000006.json  chunk_000007.json  chunk_000008.json  chunk_000009.json  chunk_000010.json  chunk_000011.json  chunk_000012.json  chunk_000013.json  chunk_000014.json  chunk_000015.json  chunk_000016.json  chunk_000017.json  chunk_000018.json  chunk_000019.json  chunk_000020.json  chunk_000021.json  chunk_000022.json  chunk_000023.json  chunk_000024.json  chunk_000025.json  chunk_000026.json  chunk_000027.json  chunk_000028.json  chunk_000029.json  chunk_000030.json  chunk_000031.json  chunk_000032.json  chunk_000033.json  chunk_000034.json  chunk_000035.json  chunk_000036.json  chunk_000037.json  chunk_000038.json  chunk_000039.json  chunk_000040.json  (+7855 more)
benchmarks/: Cargo.toml  README.md
benchmarks/benches/: extraction.rs  file_io.rs  sync.rs
benchmarks/src/: main.rs
benchmarks/src/benchmarks/: file_io.rs  instance_tree.rs  mod.rs  serialization.rs
docs/: 404.md  ai-instructions.md  ai-testing.md  bot-testing.md  faq.md  harness-system.md  index.md  serialization.md  testing-checklist.md  troubleshooting.md  vercel.json
docs/.vitepress/: config.ts
docs/api/: http-api.md
docs/getting-started/: configuration.md  index.md  installation.md  quick-start.md
docs/mcp/: index.md  tools.md
docs/vscode/: commands.md  luau-lsp.md
game_project/src/: Chat.rbxjson  LocalizationService.rbxjson  SoundService.rbxjson  StarterPack.rbxjson  TestService.rbxjson
game_project_new/src/: Chat.rbxjson  Lighting.rbxjson  LocalizationService.rbxjson  ReplicatedFirst.rbxjson  SoundService.rbxjson  StarterPack.rbxjson  Teams.rbxjson
output/scripts/: ActionHandler.server.luau  Actions.luau  CardBoard.luau  Confetti.client.luau  Counter.client.luau  Jumper.client.luau  (+10 more)
output_new/: class_index.json  game_data.json
output_v2/: class_index.json
plugin/: default.project.json  rbxsync.rbxm
rbxsync-cli/: Cargo.toml
rbxsync-cli/src/: main.rs
rbxsync-core/: Cargo.toml
rbxsync-core/src/: lib.rs  obfuscator.rs  path_utils.rs  plugin_builder.rs  rojo.rs
rbxsync-core/src/types/: harness.rs  mod.rs  project.rs  wally.rs
rbxsync-discord/: .env.example  .gitignore  README.md  package-lock.json  package.json
rbxsync-mcp/: Cargo.toml
rbxsync-mcp/src/: main.rs
rbxsync-mcp/src/tools/: mod.rs
rbxsync-server/: Cargo.toml
rbxsync-server/src/: file_watcher.rs  git.rs  harness.rs  lib.rs
rbxsync-server/src/harness/templates/: horror.yaml  obby.yaml  rpg.yaml  simulator.yaml  tycoon.yaml
rbxsync-vscode/: .vscodeignore  LICENSE  README.md  esbuild.js  language-configuration.json  package-lock.json  package.json
scripts/: consolidate_extraction.py  install.ps1  sync_to_studio.py  write_file_tree.py
website/: CNAME  index.html  llms.txt
(+385641 files in other folders)
