[package]
name = "rbxsync-server"
version.workspace = true
edition.workspace = true

[dependencies]
rbxsync-core = { path = "../rbxsync-core" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
notify = { workspace = true }
async-stream = "0.3"
futures = "0.3"
